single-vpc/secgrp.tf
resource "aws_security_group" "allow_port" {
  name        = "allow_port"
  description = "Allow port inbound traffic"
  vpc_id      = "${aws_vpc.myvpc.id}"

  ingress {
    description = "open port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "open port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_port"
  }
}
